--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Hello World!",
   "main": "app.js",
+  "scripts": {"start": "node app.js"},
   "author": "Red Hat Training",
-  "scripts":{"start":,"node app.js"},
   "license": "ASL",
   "dependencies": {
   "express": "4.14.x"
